# polyscript

./: .gitignore  .mise.toml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  devbox.json  polyscript.toml
.github/workflows/: ci.yml
include/: polyscript_ffi.h
scripts/cpp/: example.cpp
scripts/fortran/: example.f90
scripts/go/: example.go
scripts/haskell/: example.hs
scripts/js/: example.js
scripts/julia/: example.jl
scripts/kotlin/: example.kts
scripts/lua/: example.lua
scripts/mojo/: example.mojo
scripts/nim/: example.nim
scripts/python/: example.py
scripts/r/: example.r
scripts/swift/: example.swift
scripts/ts/: example.ts
scripts/wasm/: example.wat
scripts/zig/: example.zig
src/: daemon.rs  main.rs
src/bridge/: cpp.rs  julia.rs  ktn.rs  mod.rs  python.rs
