[package]
name = "polyscript"
version = "0.1.0"
edition = "2024"

[dependencies]
# Python FFI
pyo3 = { version = "0.22", features = ["auto-initialize"] }
# C++ FFI (via bindgen at build time)
# Julia FFI
# libjulia-sys = "0.2"  # uncomment when needed

# CLI
clap = { version = "4", features = ["derive"] }
# Error handling
anyhow = "1"
# Dynamic library loading (C++ FFI)
libloading = "0.8"
# polyscript.toml registry
toml = "0.8"
serde = { version = "1", features = ["derive"] }
# daemon mode — Unix socket JSON protocol
serde_json = "1"

[build-dependencies]
bindgen = "0.69"
